# kit-2025

./: .gitignore  README.md  cloud-init-k8s.yml  cloud-init-master.yml  cloud-init-minion.yml  pyproject.toml
ansible/: complex.play.yml  simple.play.yml
ansible/inventory/: inventory.sh  testing.yml
ansible/roles/nginx/defaults/: main.yml
ansible/roles/nginx/tasks/: main.yml
ansible/roles/nginx/templates/: nginx.conf.j2
curl/: data.json  script.sh
golang/: go.mod  go.sum  main.go
k8s/: script.sh
k8s/helm/: ultimate.sh  webserver-api.values.yaml
k8s/helm/webserver/: values.yaml
k8s/helm/webserver/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
k8s/kubectl/: api-configmap.yaml  api-deployment.yaml  api-ingress.yaml  api-service.yaml  webserver-configmap.yaml  webserver-deployment.yaml  webserver-ingress.yaml  webserver-service.yaml
salt/: schedule.conf
terraform/: .terraform.lock.hcl  data.tf  locals.tf  main.tf  provider.tf
yc_cli/: script.sh
