[project]
name = "kit-2025"
version = "0.1.0"
description = ""
authors = [{ name = "ysignat", email = "ignatovegors@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible (>=11.8.0,<12.0.0)",
    "ansible-lint (>=25.6.1,<26.0.0)",
    "awscli (>=1.41.9,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
